# rhodyn

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  REPRODUCING.md  mkdocs.yml  package-lock.json  package.json  playwright.config.mjs  pyproject.toml
case_studies/: cell_painting_mitotox_endpoint_model_rows.csv  cell_painting_mitotox_endpoint_summary.csv  cell_painting_mitotox_model_comparison.provenance.json  cell_painting_mitotox_model_ranking.csv  drg_calcium_residence_amplitude_benchmark.csv  drg_calcium_residence_amplitude_benchmark.provenance.json  erk_gpcr_erk_akt_bounded_coupling.csv  erk_gpcr_erk_akt_bounded_coupling.provenance.json  erk_gpcr_erk_akt_hardening_report.json  erk_gpcr_erk_akt_margin_sensitivity.csv  erk_gpcr_erk_akt_residence_summary.csv  erk_gpcr_erk_akt_threshold_sensitivity.csv  erk_gpcr_residence_amplitude_benchmark.csv  erk_gpcr_residence_amplitude_benchmark.provenance.json  mlci_public_man_track_subset.txt  mlci_public_track_features_subset.csv  mlci_public_track_features_subset.provenance.json  public_data_candidates.tsv  stage3_case_study_bank_gate_report.json
deploy/: docker-compose.stage4.yml  stage4.Dockerfile  stage4.env.example
docs/: api_reference.md  architecture.md  broken_link_scan_report.json  broken_link_scan_report.md  cell_painting_endpoint_benchmark.md  clean_room_reproducibility.md  clean_room_reproducibility_report.md  cli_reference.md  dependency_review_report.json  dependency_review_report.md  docker_smoke_audit_report.json  drg_calcium_public_benchmark.md  (+71 more)
(+311 files in other folders)
