[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhodyn"
version = "0.1.0"
description = "Dynamic residence-state analysis for live-cell signaling and perturbation data."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Renato Socodato" }
]
keywords = [
  "live-cell signaling",
  "residence time",
  "cell-state control",
  "perturbation analysis",
  "systems biology"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = []

[project.optional-dependencies]
pandas = [
  "pandas>=2.0"
]
stats = [
  "scipy>=1.11"
]
plots = [
  "matplotlib>=3.8"
]
backend = [
  "fastapi>=0.115",
  "httpx>=0.25",
  "uvicorn>=0.30"
]
notebooks = [
  "jupyterlab>=4.0"
]
dev = [
  "build>=1.2",
  "mkdocs>=1.6",
  "twine>=5.0"
]
all = [
  "pandas>=2.0",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "fastapi>=0.115",
  "httpx>=0.25",
  "uvicorn>=0.30",
  "jupyterlab>=4.0"
]

[project.urls]
Homepage = "https://github.com/renatosocodato/rhodyn"
Source = "https://github.com/renatosocodato/rhodyn"

[project.scripts]
rhodyn = "rhodyn.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
